--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,12 @@
 			{% if page.path == "index.html" %}
 			<span class="title">
 				<li>
-					<a href="/index.html">home</a>
+					<a href="/index.html">首页</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/index.html">home</a>
+					<a href="/index.html">首页</a>
 				</li>			
 			{% endif %}
 			{% if page.path == "archive.html" %}
