--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,34 +15,34 @@
 			{% if page.path == "archive.html" %}
 			<span class="title">
 				<li>
-					<a href="/archive.html">archive</a>
+					<a href="/archive.html">存档</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/archive.html">archive</a>
+					<a href="/archive.html">存档</a>
 				</li>			
 			{% endif %}
 			{% if page.path == "category.html" %}
 			<span class="title">
 				<li>
-					<a href="/category.html">category</a>
+					<a href="/category.html">分类</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/category.html">category</a>
+					<a href="/category.html">分类</a>
 				</li>			
 			{% endif %}
 			{% if page.path == "about.html" %}
 			<span class="title">
 				<li>
-					<a href="/about.html">about</a>
+					<a href="/about.html">关于</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/about.html">about</a>
+					<a href="/about.html">关于</a>
 				</li>			
 			{% endif %}
 		</div>
@@ -52,17 +52,6 @@
 				<a href="https://github.com/{{ site.github_username }}" title="Github">
 					<img width="19px" height="19px" src="/images/github.png"/>
 				</a>
-			</li>
-			<li>
-				<a href="/feed.xml" title="RSS">
-					<img width="19px" height="19px" src="/images/rss.png"/>
-				</a>
-			</li>
-			<li>
-				<a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
-					<img width="19px" height="19px" src="/images/twitter.png"/>
-				</a>
-			</li>
 		</ul>		
 	</div>
 </header>
