--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,8 @@
 ---
 layout: default
 ---
-<div class="post">
-  <br>
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+{% include post.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-</div>
+{% if site.disqus and page.comments %}
+    {% include disqus.html %}
+{% endif %}
