--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,7 +59,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="http://i.imgbox.com/qNJQcj7P.jpg" class="img-circle" />
+				<img src="http://imgbox.com/LmByIf0e" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
